--- a/Source/AudioVolumeSyncer/Locale_Texts.resx
+++ b/Source/AudioVolumeSyncer/Locale_Texts.resx
@@ -160,4 +160,7 @@
   <data name="Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Logo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Logging" xml:space="preserve">
+    <value>Logging</value>
+  </data>
 </root>
